fixd overlap of checkbox and header

--- a/app/globals.css
+++ b/app/globals.css
@@ -674,3 +674,16 @@ button, input, optgroup, select, textarea {
       grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
+
+
+/* checkbox nextui */
+.after\:bg-success:after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: var(--color-brand-primary) !important;
+}
+
+.text-success-foreground {
+  --tw-text-opacity: 1;
+  color: #fff !important;
+}
